[Styler] Adjust blockStyler.scss file to prevent text overflow in type btn element of #blockStyler

--- a/src/assests/_blockStyler.scss
+++ b/src/assests/_blockStyler.scss
@@ -2,14 +2,13 @@
 #blockStyler{
   position: absolute;
   @include popupMenu;
-  height: 32px;
   border-radius: 5px ;
   width: fit-content;
   overflow-x: scroll;
   .inner{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 32px;
     display: flex;
     flex-direction: row;
   }
@@ -20,9 +19,14 @@
     display: flex;
     align-items: center;
     font-size: 14px;
-    line-height: 1.2;
     &:hover{
       background-color: $itemHover;
+    }
+    span ,svg{
+      height: 14px;
+    }
+    span{
+      min-width: fit-content
     }
   }
   #commandBlock{
