--- a/src/assests/main.css
+++ b/src/assests/main.css
@@ -351,7 +351,6 @@ a:link, a:active, a:visited {
   z-index: 10;
   border-radius: 8px;
   box-shadow: 0px 0px 23px -5px #ababab;
-  height: 32px;
   border-radius: 5px;
   width: -moz-fit-content;
   width: fit-content;
@@ -366,7 +365,7 @@ a:link, a:active, a:visited {
 #blockStyler .inner {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 32px;
   display: flex;
   flex-direction: row;
 }
@@ -377,10 +376,16 @@ a:link, a:active, a:visited {
   display: flex;
   align-items: center;
   font-size: 14px;
-  line-height: 1.2;
 }
 #blockStyler .btn:hover {
   background-color: #EDECE9;
+}
+#blockStyler .btn span, #blockStyler .btn svg {
+  height: 14px;
+}
+#blockStyler .btn span {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 #blockStyler #commandBlock {
   display: flex;
